Change file name

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class = "shopname">
-            <a href="">
+            <a href="index.html">
             <h1>Best Seller shop</h1>
             <h2>-- 2021 --</h2>
             </a>
